--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.0",
     "react-svgmap-india": "^2.1.0",
-    "web-vitals": "^2.1.4"
+    "swiper": "^11.2.4",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
